--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/meme.png
+    - assets/images/firstScreen.png
+    - assets/images/secondScreen.PNG
 
   # To add assets to your application, add an assets section, like this:
   # assets:
